# Phi-nance

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_SETUP.md  AGENT_PROMPT.md  APP_V3_README.md  Architecture.md  BETA_DEPLOY.md  BUILD_SPEC.md  CHANGELOG.md  CODESPACES.md  CODESPACES_PULL_FIX.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.worker  FIX_EXPAND_BUTTON.md  LICENSE  Makefile  ORACLE_DEPLOY.md  ORACLE_FREE_START_HERE.md  QUICK_FIX.md  QUICK_START.md  README.md  REFRESH_GUI.md  RUN_APP_V2.md  RUN_STRATEGY_LAB.md  SETUP.md  SETUP_WORKSPACE.md  START_HERE.md  START_RUNNING.md  STEP_BY_STEP.md  TROUBLESHOOTING.md  VPS_SETUP.md  VPS_SPECS.md  WHAT_TO_RUN.md  _test_mft.py  analyze_features.py  (+34 more)
.claude/hooks/: session-start.sh
.cursor/rules/: auto-commit-push.mdc  projection-only.mdc
.github/agents/: advisor.agent.md  orchestrator.agent.md  risk-monitor.agent.md  strategy-rd.agent.md
.github/instructions/: distributed.instructions.md  experimentation.instructions.md  feature-engineering.instructions.md  hierarchical-rl.instructions.md  live-trading.instructions.md  llm-integration.instructions.md  meta-learning.instructions.md  notebooks.instructions.md  options-trading.instructions.md  phi-trading.instructions.md  sweeps.instructions.md  transformer-ml.instructions.md  world-models.instructions.md
.github/prompts/: backtest-analysis.prompt.md  distributed.prompt.md  experimentation.prompt.md  feature-engineering.prompt.md  hierarchical-rl.prompt.md  live-setup.prompt.md  llm-risk-report.prompt.md  llm-strategy-review.prompt.md  llm-trade-explanation.prompt.md  meta-learning.prompt.md  notebooks.prompt.md  options-rl-integration.prompt.md  options-strategy.prompt.md  risk-analysis.prompt.md  risk-report.prompt.md  rl-strategy-analysis.prompt.md  strategy-proposal.prompt.md  sweeps.prompt.md  transformer-ml.prompt.md  world-models.prompt.md
.github/workflows/: ci.yml  validate-hve.yml
.streamlit/: VISUAL_SPEC.md  config.toml  styles.css
app_streamlit/: __init__.py  app.py  cache.py  config.py  device_detect.py  live_dashboard.py  live_workbench.py  main.py  premium_dashboard.py  state.py  styles.py  ui_components.py  ui_handlers.py
app_streamlit/pages/: __init__.py  autonomous_pipeline_page.py  (+4 more)
configs/: data_optimisation_config.yaml  distributed_config.yaml  execution_agent.yaml  features_config.yaml  live_config.yaml  llm_config.yaml  meta_agent.yaml  meta_config.yaml  optimisation_config.yaml  risk_monitor_agent.yaml  rl_optimisation_config.yaml  strategy_rd_agent.yaml  transformer_config.yaml  world_model_config.yaml
data/: __init__.py
deploy/: VPS_ATL1.md  deploy_vps.sh
docs/: AGENT_WORLD_MODEL.md  BACKTESTING_PY_INTEGRATION.md  COMBINED_STRATEGIES.md  DATA_AND_PHASE_STATUS.md  GITHUB_DATA_SOURCES.md  GITHUB_REPOS.md  LUMIBOT_INTEGRATION.md  REPO_STATUS.md  STRATEGY_LAB_GUI.md  WHAT_I_NEED_FOR_PHASE2.md  api_reference.md  architecture.md  automated_features.md  data_pipeline_optimisation.md  distributed_backtesting.md  execution_agent_rl.md  experimentation.md  external-options-data-landscape.md  hierarchical_rl.md  hyperparameter_sweeps.md  live_trading.md  llm_integration.md  meta_learning.md  mft.md  options_phase1.md  options_phase2.md  options_phase3.md  performance_optimisation.md  risk_monitor_agent_rl.md  rl_training_optimisation.md  strategy_rd_agent_rl.md  transformer_model.md  world_models.md
fixtures/: projection_packet_sample.json
legacy/: _test_mft.py  dashboard.py
logs/: BlendedMFTStrategy_2026-02-20_13-49_dY7oxY_stats.csv  BlendedMFTStrategy_2026-02-20_13-49_dY7oxY_stats.parquet  BlendedMFTStrategy_2026-02-20_13-58_2lJnQf_settings.json  BlendedMFTStrategy_2026-02-20_13-58_2lJnQf_stats.csv  BlendedMFTStrategy_2026-02-20_13-58_2lJnQf_stats.parquet  BlendedMFTStrategy_2026-02-20_13-58_2lJnQf_trade_events.parquet  BollingerBands_2026-02-20_13-49_YTVsic_stats.csv  BollingerBands_2026-02-20_13-49_YTVsic_stats.parquet  LiquidityPoolStrategy_2026-02-20_13-49_Frv6dO_stats.csv  LiquidityPoolStrategy_2026-02-20_13-49_Frv6dO_stats.parquet  WyckoffStrategy_2026-02-20_13-49_S9XcLv_stats.csv  WyckoffStrategy_2026-02-20_13-49_S9XcLv_stats.parquet
models/: README.md  classifier_gb.pkl  classifier_lgb.txt  classifier_lr.pkl  classifier_rf.pkl
notebooks/: 01_basic_analysis.ipynb  02_sweep_analysis.ipynb  03_custom_analysis.ipynb  README.md
phi/: __init__.py  config.py  logging.py  run_config.py
phinance/: __init__.py  exceptions.py
regime_engine/: __init__.py  affinity_matrix.py  auto_learning.py  config.yaml  data_fetcher.py  demo_notebook.ipynb  expert_registry.py  feature_extractor.py  features.py  gamma_surface.py  indicator_library.py  l2_feed.py  live_scanner.py  mixer.py  ml_classifier.py  ml_classifier_lightgbm.py  options_engine.py  param_tuner.py  plutus_advisor.py  probability_field.py  projection_engine.py  rl_trading_env.py  scanner.py  species.py  taxonomy_engine.py  variable_registry.py
scripts/: app.py  app_v2.py  fetch_data.py  list_runs.py  profile_backtest.py  run_backtest.py  run_backtesting_py.py  run_dashboard.py  run_experiment.py  run_gp_search.py  run_lumibot_backtest.py  run_mcp_server.py  run_paper_daily.py  run_phase2.py  run_sweep.py  setup_data_spine.py  train_execution_agent.py  train_meta_agent.py  train_risk_monitor_agent.py  train_strategy_rd_agent.py
strategies/: _lumibot_lazy.py  alpha_vantage_fixed.py  blended_mft_strategy.py  blended_workbench_strategy.py  bollinger.py  breakout.py  buy_and_hold.py  dual_sma.py  ensemble_strategy.py  lightgbm_strategy.py  liquidity_pools.py  macd.py  mean_reversion.py  ml_classifier_strategy.py  momentum.py  options_strategy.py  plutus_strategy.py  prediction_tracker.py  rl_strategy.py  rsi.py  wyckoff.py
tests/: __init__.py  test_backtest.py  test_blender.py  test_blending.py  test_cache.py  test_gex_math.py  test_options.py  test_options_backtest.py  test_paths.py  test_phi_backtest_engines.py  test_phi_blending_refactor.py  test_phiai.py  test_projection_packet.py  test_run_config.py  test_ui_handlers.py
(+409 files in other folders)
